# breakout

./: CMakeLists.txt
include/: Game.h  Game.hpp  ResourceManager.h  ResourceManager.hpp  Shader.h  Shader.hpp  Texture2D.h  Texture2D.hpp  Utility.h
include/glad/: glad.h
shaders/: vs.glsl
src/: Game.cpp  ResourceManager.cpp  Shader.cpp  Texture2D.cpp  glad.c  main.cpp
